{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 309,
  "lineage": "5ae0e4a6-4468-30fc-22c7-984010b453c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "demoeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095b0c770ae39e5c3",
            "association_id": "eipassoc-07b4c1aeb068ee164",
            "domain": "vpc",
            "id": "eipalloc-095b0c770ae39e5c3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04291682c858269ea",
            "private_dns": "ip-10-1-0-206.us-west-2.compute.internal",
            "private_ip": "10.1.0.206",
            "public_dns": "ec2-52-42-112-16.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.112.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-eip"
            },
            "tags_all": {
              "Name": "demo-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e2d37b6a0129927",
            "arn": "arn:aws:ec2:us-west-2:925307459448:instance/i-06113b00888790383",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06113b00888790383",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d02e99b6a729adec",
            "private_dns": "ip-10-1-0-225.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.225",
            "public_dns": "ec2-54-185-184-92.us-west-2.compute.amazonaws.com",
            "public_ip": "54.185.184.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd46c86aa90cd595",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f31d7e55dc7e7e2a",
            "tags": {
              "Name": "demo"
            },
            "tags_all": {
              "Name": "demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087e38421f8b9ec70"
            ]
          },
          "dependencies": [
            "aws_key_pair.pem",
            "aws_security_group.my-sg",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:internet-gateway/igw-0d6f070dd8cd7a3ab",
            "id": "igw-0d6f070dd8cd7a3ab",
            "owner_id": "925307459448",
            "tags": {
              "Name": "my-ig"
            },
            "tags_all": {
              "Name": "my-ig"
            },
            "vpc_id": "vpc-0f30ec64b4127fba7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095b0c770ae39e5c3",
            "connectivity_type": "public",
            "id": "nat-0ffadbad83417e0f4",
            "network_interface_id": "eni-04291682c858269ea",
            "private_ip": "10.1.0.206",
            "public_ip": "52.42.112.16",
            "subnet_id": "subnet-0f31d7e55dc7e7e2a",
            "tags": {
              "Name": "My-Nat"
            },
            "tags_all": {
              "Name": "My-Nat"
            }
          },
          "dependencies": [
            "aws_eip.demoeip",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "my-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:network-acl/acl-047fdf71354804dec",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "id": "acl-047fdf71354804dec",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "925307459448",
            "subnet_ids": [
              "subnet-08cb2931d1a9a567c",
              "subnet-0bee1040786cc03b9",
              "subnet-0dc0c6f1ddb2394da",
              "subnet-0f31d7e55dc7e7e2a"
            ],
            "tags": {
              "Name": "my-acl"
            },
            "tags_all": {
              "Name": "my-acl"
            },
            "vpc_id": "vpc-0f30ec64b4127fba7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.priv-subnet-1",
            "aws_subnet.priv-subnet-2",
            "aws_subnet.pub-subnet-1",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:route-table/rtb-05dd6bcc22ebb7e13",
            "id": "rtb-05dd6bcc22ebb7e13",
            "owner_id": "925307459448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ffadbad83417e0f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-priv-rt"
            },
            "tags_all": {
              "Name": "my-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f30ec64b4127fba7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.demoeip",
            "aws_nat_gateway.my-nat",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:route-table/rtb-0a7fcb8be49663725",
            "id": "rtb-0a7fcb8be49663725",
            "owner_id": "925307459448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6f070dd8cd7a3ab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-pub-rt"
            },
            "tags_all": {
              "Name": "my-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f30ec64b4127fba7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-1-sub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adba446d83df203e",
            "route_table_id": "rtb-05dd6bcc22ebb7e13",
            "subnet_id": "subnet-08cb2931d1a9a567c"
          },
          "dependencies": [
            "aws_eip.demoeip",
            "aws_nat_gateway.my-nat",
            "aws_route_table.priv-rt",
            "aws_subnet.priv-subnet-1",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-2-sub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e29c6bb5bd1340a0",
            "route_table_id": "rtb-05dd6bcc22ebb7e13",
            "subnet_id": "subnet-0dc0c6f1ddb2394da"
          },
          "dependencies": [
            "aws_eip.demoeip",
            "aws_nat_gateway.my-nat",
            "aws_route_table.priv-rt",
            "aws_subnet.priv-subnet-2",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-1-sub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00527b0a6789ade6d",
            "route_table_id": "rtb-0a7fcb8be49663725",
            "subnet_id": "subnet-0f31d7e55dc7e7e2a"
          },
          "dependencies": [
            "aws_internet_gateway.my-ig",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-2-sub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f05d6a87902db349",
            "route_table_id": "rtb-0a7fcb8be49663725",
            "subnet_id": "subnet-0bee1040786cc03b9"
          },
          "dependencies": [
            "aws_internet_gateway.my-ig",
            "aws_route_table.pub-rt",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:security-group/sg-087e38421f8b9ec70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087e38421f8b9ec70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "925307459448",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f30ec64b4127fba7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:subnet/subnet-08cb2931d1a9a567c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cb2931d1a9a567c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925307459448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-1"
            },
            "tags_all": {
              "Name": "priv-subnet-1"
            },
            "vpc_id": "vpc-0f30ec64b4127fba7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:subnet/subnet-0dc0c6f1ddb2394da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc0c6f1ddb2394da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925307459448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-2"
            },
            "tags_all": {
              "Name": "priv-subnet-2"
            },
            "vpc_id": "vpc-0f30ec64b4127fba7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:subnet/subnet-0f31d7e55dc7e7e2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f31d7e55dc7e7e2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925307459448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-1"
            },
            "tags_all": {
              "Name": "pub-subnet-1"
            },
            "vpc_id": "vpc-0f30ec64b4127fba7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:subnet/subnet-0bee1040786cc03b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bee1040786cc03b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925307459448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-2"
            },
            "tags_all": {
              "Name": "pub-subnet-2"
            },
            "vpc_id": "vpc-0f30ec64b4127fba7"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:925307459448:vpc/vpc-0f30ec64b4127fba7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01ff02bfeb5310f28",
            "default_route_table_id": "rtb-00af7826da93fe5a6",
            "default_security_group_id": "sg-01fe66a1346583bc7",
            "dhcp_options_id": "dopt-00b8432e68c59053d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f30ec64b4127fba7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00af7826da93fe5a6",
            "owner_id": "925307459448",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}